added notifications to my views but it still not working nor the calendar in my forms its annoying

--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -104,6 +104,7 @@
         <button id="confirm-delete-btn" class="btn btn-danger">Delete</button>
     </div>
 </div>
+
 <!-- Delete Column Confirmation Modal -->
 <div id="delete-column-confirmation-modal" class="modal">
     <div class="modal-content">
@@ -126,7 +127,15 @@
 
 {% block extra_js %}
 <script src="{% static 'js/kanban.js' %}"></script>
+<script src="{% static 'js/kanban_custom.js' %}"></script>
 {% endblock %}
+
+
+
+
+
+
+
 
 
 
