--- a/templates/base.html
+++ b/templates/base.html
@@ -41,11 +41,12 @@
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    
     {% block extra_js %}{% endblock %}
 </body>
 </html>
+
 
 
 
