edited the DOM to make my tasks move from collum to collum isnstanly

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -61,8 +61,10 @@
             </div>
         </div>
     </div>
+    <script src="{% static 'js/auth_notifications.js' %}"></script>
 </body>
 </html>
+
 
 
 
