--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In - CanDo</title>
+    <title>Sign Up - CanDo</title>
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/32x32favi.png' %}">
@@ -38,30 +38,33 @@
     </div>
     <div class="container">
         <div class="login-section">
-            <h2>Sign In</h2>
-            <form method="post" action="{% url 'account_login' %}">
+            <h2>Sign Up</h2>
+            <form method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="id_login">Username</label>
-                    <input type="text" name="login" id="id_login" required>
+                    <label for="id_username">Username</label>
+                    <input type="text" name="username" id="id_username" required>
                 </div>
                 <div class="form-group">
-                    <label for="id_password">Password</label>
-                    <input type="password" name="password" id="id_password" required>
+                    <label for="id_email">Email</label>
+                    <input type="email" name="email" id="id_email" required>
                 </div>
-                <div class="remember-me">
-                    <label for="id_remember">Remember Me</label>
-                    <input type="checkbox" name="remember" id="id_remember">
+                <div class="form-group">
+                    <label for="id_password1">Password</label>
+                    <input type="password" name="password1" id="id_password1" required>
                 </div>
-                <button type="submit" class="btn">Sign In</button>
+                <div class="form-group">
+                    <label for="id_password2">Confirm Password</label>
+                    <input type="password" name="password2" id="id_password2" required>
+                </div>
+                <button type="submit" class="btn">Sign Up</button>
             </form>
-            <div class="auth-links">
-                <a href="{% url 'account_reset_password' %}">Forgot your password?</a><br>
-                <a href="{% url 'account_signup' %}" class="sign-up-link">Sign Up</a>
-            </div>
         </div>
     </div>
+    <script src="{% static 'js/auth_notifications.js' %}"></script>
 </body>
 </html>
+
+
 
 
