i removed in progress and done collums from database only leaving 2 default collums

--- a/static/css/kanban.css
+++ b/static/css/kanban.css
@@ -210,7 +210,11 @@ body {
     background-color: #f44336; /* Red */
 }
 
-
+.unclickable {
+    pointer-events: none;
+    cursor: default;
+    background-color: #3b1272;
+}
 
 
 
