--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -31,6 +31,18 @@
                         <div class="kanban-task-due">{{ task.due_date }}</div>
                         <div class="kanban-task-details" style="display: none;">
                             <p>{{ task.description }}</p>
+                            <div class="attachments">
+                                {% for attachment in task.attachments_with_type %}
+                                <div class="attachment">
+                                    {% if attachment.is_pdf %}
+                                    <a href="{{ attachment.file.url }}" target="_blank">{{ attachment.file.name }}</a>
+                                    {% else %}
+                                    <a href="{{ attachment.file.url }}" target="_blank"><img src="{{ attachment.file.url }}" alt="Attachment" class="attachment-thumbnail"></a>
+                                    {% endif %}
+                                    <button class="btn btn-danger remove-attachment-btn" data-attachment-id="{{ attachment.id }}">Remove</button>
+                                </div>
+                                {% endfor %}
+                            </div>
                             <button class="btn btn-primary edit-task-btn">Edit</button>
                             <button class="btn btn-danger delete-task-btn">Delete</button>
                             <button class="btn btn-secondary close-task-btn">Close</button>
@@ -50,9 +62,13 @@
 <div id="task-modal" class="modal">
     <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <form id="task-form" method="post" action="{% url 'kanban:create_task' %}">
+        <form id="task-form" method="post" action="{% url 'kanban:create_task' %}" enctype="multipart/form-data">
             {% csrf_token %}
             {{ task_form|crispy }}
+            <div class="form-group">
+                <label for="attachments">Attachments:</label>
+                <input type="file" id="attachments" name="attachments" class="form-control" multiple>
+            </div>
             <div class="priority-indicators">
                 <p><span class="priority-indicator priority-low"></span> Low</p>
                 <p><span class="priority-indicator priority-medium"></span> Medium</p>
@@ -129,6 +145,9 @@
 <script src="{% static 'js/kanban.js' %}"></script>
 <script src="{% static 'js/kanban_custom.js' %}"></script>
 {% endblock %}
+
+
+
 
 
 
