--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -68,6 +68,8 @@
             <div class="form-group">
                 <label for="attachments">Attachments:</label>
                 <input type="file" id="attachments" name="attachments" class="form-control" multiple>
+                <div id="file-preview" class="file-preview-container"></div>
+                <div id="existing-file-preview" class="file-preview-container"></div>
             </div>
             <div class="priority-indicators">
                 <p><span class="priority-indicator priority-low"></span> Low</p>
