added deletion to attachemnts from form

--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -157,6 +157,17 @@
     </div>
 </div>
 
+<!-- Delete Attachment Confirmation Modal -->
+<div id="delete-attachment-confirmation-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <p>Are you sure you want to delete this attachment?</p>
+        <button id="confirm-delete-attachment-btn" class="btn btn-danger">Delete</button>
+        <button id="cancel-delete-attachment-btn" class="btn btn-secondary">Cancel</button>
+    </div>
+</div>
+
+
 {% endblock %}
 
 {% block extra_js %}
