attacment modol appaers for deletion

--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -156,14 +156,12 @@
         <button id="close-move-delete-task-modal-btn" class="btn btn-secondary">Close</button>
     </div>
 </div>
-
 <!-- Delete Attachment Confirmation Modal -->
 <div id="delete-attachment-confirmation-modal" class="modal">
     <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <p>Are you sure you want to delete this attachment?</p>
+        <p id="delete-attachment-confirmation-text"></p>
         <button id="confirm-delete-attachment-btn" class="btn btn-danger">Delete</button>
-        <button id="cancel-delete-attachment-btn" class="btn btn-secondary">Cancel</button>
     </div>
 </div>
 
