--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -6,6 +6,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/kanban.css' %}">
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 {% endblock %}
 
 {% block content %}
@@ -100,7 +101,6 @@
     </div>
 </div>
 
-
 <!-- Column Modal -->
 <div id="column-modal" class="modal">
     <div class="modal-content">
@@ -171,10 +171,12 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/kanban.js' %}"></script>
 <script src="{% static 'js/kanban_custom.js' %}"></script>
+<script src="{% static 'js/file_preview.js' %}"></script>
 {% endblock %}
 
 
