--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,18 +1,29 @@
 /* global.css */
 
+.dropdown-menu {
+    z-index: 1100 !important;
+    overflow: visible !important;
+}
+
+.navbar {
+    overflow: visible !important;
+    z-index: 1050 !important;
+}
+
+.navbar-collapse {
+    overflow: visible !important;
+    z-index: 1050 !important;
+}
+
 .modal-backdrop {
-    z-index: 1040 !important;
+    z-index: 1000 !important;
 }
 
 .modal {
     z-index: 1050 !important;
 }
 
-.navbar {
-    z-index: 1030 !important;
-}
-
-
 body > *:not(.modal, .modal-backdrop, .navbar) {
     z-index: 1000;
 }
+
