--- a/templates/base.html
+++ b/templates/base.html
@@ -25,24 +25,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'kanban:index' %}">Kanban</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#settingsModal">Settings</a>
-                    </li>
-                </ul>
-                <form class="d-flex me-3" method="get" action="{% url 'kanban:search_tasks' %}">
+                <form class="d-flex me-auto" method="get" action="{% url 'kanban:search_tasks' %}">
                     <input class="form-control me-2" type="search" name="q" placeholder="Search tasks" aria-label="Search" required>
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
                 <div class="dropdown">
                     <a href="#" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="{% static 'images/default-profile.png' %}" alt="Profile" class="rounded-circle navbar-avatar" style="height: 40px;">
+                        <img src="{{ user.profile.profile_image.url }}" alt="Profile" class="rounded-circle navbar-avatar" style="height: 40px;">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                         <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#profileModal">Profile</a></li>
+                        <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#settingsModal">Settings</a></li>
                         <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</a></li>
                     </ul>
                 </div>
@@ -80,7 +73,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="{% static 'images/default-profile.png' %}" alt="Profile" class="rounded-circle profile-avatar" style="height: 100px;">
+                    <img src="{{ user.profile.profile_image.url }}" alt="Profile" class="rounded-circle profile-avatar" style="height: 100px;">
                     <h3>{{ user.get_full_name }}</h3>
                     <p class="email">Email: {{ user.email }}</p>
                     <p class="bio">Bio: {{ user.profile.bio }}</p>
@@ -94,7 +87,7 @@
     </div>
 
     <!-- Edit Profile Modal -->
-    <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+    <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true" data-edit-profile-url="{% url 'kanban:edit_profile_api' %}">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -120,7 +113,7 @@
                             <label for="profileBio" class="form-label">Bio</label>
                             <textarea class="form-control" id="profileBio" name="bio">{{ user.profile.bio }}</textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                        <button type="submit" class="btn btn-primary" id="saveProfileChangesBtn">Save Changes</button>
                     </form>
                 </div>
             </div>
@@ -128,7 +121,7 @@
     </div>
 
     <!-- Confirm Delete Modal -->
-    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true" data-delete-account-url="{% url 'kanban:delete_account' %}">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -140,7 +133,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger" id="confirmDeleteAccount">Delete Account</button>
+                    <button type="button" class="btn btn-danger" id="confirmDeleteAccountBtn">Delete Account</button>
                 </div>
             </div>
         </div>
@@ -159,7 +152,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <a href="{% url 'account_logout' %}" class="btn btn-danger" id="confirmLogout">Logout</a>
+                    <button type="button" class="btn btn-danger" id="confirmLogoutBtn">Logout</button>
                 </div>
             </div>
         </div>
@@ -176,29 +169,3 @@
     {% block extra_js %}{% endblock %}
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
