--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -69,6 +69,13 @@ body {
     background-color: #f8d7da;
     color: #721c24;
 }
+#loadingSpinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1050; 
+}
 
 
 
