--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,13 @@
             </div>
         </div>
     </div>
+    <!-- Loading Spinner -->
+    <div id="loadingSpinner" style="display: none;">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
 
     <!-- Confirm Delete Modal -->
     <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true" data-delete-account-url="{% url 'kanban:delete_account' %}">
@@ -158,14 +165,17 @@
         </div>
     </div>
 
+
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/compressorjs@1.0.7/dist/compressor.min.js"></script>
     <script src="{% static 'js/profile.js' %}"></script>
     <script src="{% static 'js/dark_mode.js' %}"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
+
