--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -50,7 +50,7 @@
                             <button class="btn btn-danger delete-task-btn">Delete</button>
                             <button class="btn btn-secondary close-task-btn">Close</button>
                             <button class="btn btn-info move-task-btn">Move</button>
-                            <select class="move-task-dropdown" style="display:none;">
+                            <select class="move-task-dropdown">
                                 {% for column in columns %}
                                 <option value="{{ column.id }}">{{ column.name }}</option>
                                 {% endfor %}
@@ -180,6 +180,7 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="{% static 'js/kanban.js' %}"></script>
 {% endblock %}
+
 
 
 
