made sure the profile pic always stays in a circle

--- a/static/css/kanban.css
+++ b/static/css/kanban.css
@@ -204,11 +204,11 @@ body {
 }
 
 .notification.success {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50; 
 }
 
 .notification.error {
-    background-color: #f44336; /* Red */
+    background-color: #f44336; 
 }
 
 .unclickable {
