--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -179,6 +179,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="{% static 'js/kanban.js' %}"></script>
+<script src="{% static 'js/kanban_custom.js' %}"></script>
 {% endblock %}
 
 
